--- a/.github/workflows/merge-staging.yml
+++ b/.github/workflows/merge-staging.yml
@@ -13,22 +13,24 @@ jobs:
     outputs:
       infra-changed: ${{ steps.check.outputs.infra-changed }}
     steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
-      - name: Check Infrastructure Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes-infrastructure
-        with:
-          filters: |
-            package:
-              - 'terraform/**'
+      - name: Check if files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./terraform
+          then
+            echo "::set-output name=changed::false"
+          else
+            echo "::set-output name=changed::true"
+          fi
 
       - name: Set output
         id: check
-        run: echo "infra-changed=${{ steps.changes-infrastructure.outputs.package }}" >> $GITHUB_OUTPUT
+        run: echo "infra-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
 
   check-web-changes:
     if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'develop')
@@ -37,22 +39,24 @@ jobs:
     outputs:
       web-changed: ${{ steps.check.outputs.web-changed }}
     steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
-      - name: Check Web Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes-web
-        with:
-          filters: |
-            package:
-              - 'web/**'
+      - name: Check if files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./web
+          then
+            echo "::set-output name=changed::false"
+          else
+            echo "::set-output name=changed::true"
+          fi
 
       - name: Set output
         id: check
-        run: echo "web-changed=${{ steps.changes-web.outputs.package }}" >> $GITHUB_OUTPUT
+        run: echo "web-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
 
   check-lambda-changes:
     if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'develop')
@@ -61,22 +65,24 @@ jobs:
     outputs:
       lambdas-changed: ${{ steps.check.outputs.lambdas-changed }}
     steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
-      - name: Check Lambda Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes-lambda
-        with:
-          filters: |
-            package:
-              - 'lambdas/**'
+      - name: Check if files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./lambdas
+          then
+            echo "::set-output name=changed::false"
+          else
+            echo "::set-output name=changed::true"
+          fi
 
       - name: Set output
         id: check
-        run: echo "lambdas-changed=${{ steps.changes-lambda.outputs.package }}" >> $GITHUB_OUTPUT
+        run: echo "lambdas-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
 
   check-db-changes:
     if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'develop')
@@ -85,22 +91,24 @@ jobs:
     outputs:
       db-changed: ${{ steps.check.outputs.db-changed }}
     steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
-      - name: Check DB Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes-db
-        with:
-          filters: |
-            package:
-              - 'db/**'
+      - name: Check files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./db
+          then
+            echo "::set-output name=changed::false"
+          else
+            echo "::set-output name=changed::true"
+          fi
 
       - name: Set output
         id: check
-        run: echo "db-changed=${{ steps.changes-db.outputs.package }}" >> $GITHUB_OUTPUT
+        run: echo "db-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
 
   cleanup:
     if: >-
