Delete unused files and update dependencies

--- a/.github/workflows/pull-request-develop.yml
+++ b/.github/workflows/pull-request-develop.yml
@@ -21,10 +21,9 @@ jobs:
             "web",
             "authentication",
             "authorizer",
+            "assessment",
             "candidate",
-            "checklist",
             "company",
-            "position",
             "question",
           ]
     steps:
