Update component list in pull-request workflows

--- a/.github/workflows/pull-request-develop.yml
+++ b/.github/workflows/pull-request-develop.yml
@@ -61,9 +61,8 @@ jobs:
             "authentication",
             "authorizer",
             "candidate",
-            "checklist",
             "company",
-            "position",
+            "assessment",
             "question",
           ]
     steps:
