Fix typo in evaluate_question.handler

--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -37,7 +37,7 @@ functions:
     image:
       name: default
       command:
-        - evaluate_questino.handler
+        - evaluate_question.handler
     events:
       - s3:
           bucket: ${self:provider.stage}-data-candidate-response
