--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -63,7 +63,14 @@ jobs:
     strategy:
       matrix:
         component:
-          ["authentication", "authorizer", "assessment", "candidate", "company", "question"]
+          [
+            "authentication",
+            "authorizer",
+            "assessment",
+            "candidate",
+            "company",
+            "interview",
+          ]
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v3
