--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -31,6 +31,14 @@ provider:
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
     QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
 
+custom:
+  origins:
+    staging:
+      - "https://${ssm:/terraform/staging/domain_name}"
+      - "https://www.${ssm:/terraform/staging/domain_name}"
+    dev:
+      - "http://127.0.0.1:5173"
+
 functions:
   evaluate-question:
     name: ${self:provider.stage}-interview-evaluate-question
@@ -44,6 +52,24 @@ functions:
           event: s3:ObjectCreated:*
           existing: true
     timeout: 300
+
+  retrieve:
+    name: ${self:provider.stage}-interview-retrieve
+    image:
+      name: default
+      command:
+        - retrieve.handler
+    events:
+      - http:
+          path: /interviews
+          method: GET
+          cors:
+            origins: ${self:custom.origins.${self:provider.stage}}
+            allowCredentials: true
+          authorizer:
+            authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
+            type: REQUEST
+    timeout: 30
 
 plugins:
   - serverless-deployment-bucket
