feat(interview): evaluate the interview and store the data with video url (#743)
Co-authored-by: kokoaj <kokiebisu@icloud.com>

--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -48,10 +48,22 @@ functions:
         - evaluate_question.handler
     events:
       - s3:
-          bucket: ${self:provider.stage}-data-candidate-response
+          bucket: ${self:provider.stage}-data-question-response-audio
           event: s3:ObjectCreated:*
           existing: true
     timeout: 300
+
+  evaluate-interview:
+    name: ${self:provider.stage}-interview-evaluate-interview
+    image:
+      name: default
+      command:
+        - evaluate_interview.handler
+    events:
+      - s3:
+          bucket: ${self:provider.stage}-data-interview-video
+          event: s3:ObjectCreated:*
+          existing: true
 
   retrieve:
     name: ${self:provider.stage}-interview-retrieve
