configure authentication package

--- a/lambdas/authentication/serverless.dev.yml
+++ b/lambdas/authentication/serverless.dev.yml
@@ -6,16 +6,10 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: ${opt:stage, 'staging'}
+  stage: dev
   region: us-east-1
   deploymentBucket:
     name: ${self:provider.stage}-sls-authentication
-  vpc:
-    securityGroupIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
-    subnetIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
   iam:
     role: ${ssm:/terraform/shared/iam/lambda_role_arn}
   apiGateway:
@@ -51,9 +45,7 @@ functions:
           path: /logout
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
 
   github:
@@ -67,9 +59,7 @@ functions:
           path: /login/github
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
 
   google:
@@ -83,9 +73,7 @@ functions:
           path: /login/google
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
 
 plugins:
