--- a/lambdas/authorizer/serverless.dev.yml
+++ b/lambdas/authorizer/serverless.dev.yml
@@ -6,19 +6,13 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: ${opt:stage, 'staging'}
+  stage: dev
   region: us-east-1
   apiGateway:
     restApiId: ${ssm:/terraform/${self:provider.stage}/api_gateway/id}
     restApiRootResourceId: ${ssm:/terraform/${self:provider.stage}/api_gateway/root_resource_id}
   deploymentBucket:
     name: ${self:provider.stage}-sls-authorizer
-  vpc:
-    securityGroupIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
-    subnetIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
   iam:
     role: ${ssm:/terraform/shared/iam/lambda_role_arn}
   ecr:
