--- a/lambdas/candidate/package.json
+++ b/lambdas/candidate/package.json
@@ -1,28 +1,30 @@
 {
-    "name": "candidate",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-      "deploy": "sls deploy",
-      "remove": "sls remove",
-      "release": "semantic-release"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "@semantic-release/changelog": "^6.0.3",
-      "@semantic-release/commit-analyzer": "^11.1.0",
-      "@semantic-release/git": "^10.0.1",
-      "@semantic-release/github": "^9.2.6",
-      "@semantic-release/npm": "^11.0.2",
-      "@semantic-release/release-notes-generator": "^12.1.0",
-      "serverless-deployment-bucket": "^1.6.0"
-    },
-    "devDependencies": {
-      "@semantic-release/exec": "^6.0.3",
-      "conventional-changelog-cli": "^4.1.0",
-      "conventional-changelog-custom-config": "^0.3.1",
-      "semantic-release": "^22.0.12",
-      "semantic-release-monorepo": "^7.0.5"
-    }
+  "name": "candidate",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "dev:deploy": "sls deploy --config serverless.dev.yml",
+    "dev:remove": "sls remove --config serverless.dev.yml",
+    "staging:deploy": "sls deploy --stage staging --config serverless.yml",
+    "staging:remove": "sls remove --stage staging --config serverless.yml",
+    "release": "semantic-release"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/release-notes-generator": "^12.1.0",
+    "serverless-deployment-bucket": "^1.6.0"
+  },
+  "devDependencies": {
+    "@semantic-release/exec": "^6.0.3",
+    "conventional-changelog-cli": "^4.1.0",
+    "conventional-changelog-custom-config": "^0.3.1",
+    "semantic-release": "^22.0.12",
+    "semantic-release-monorepo": "^7.0.5"
   }
+}
