--- a/lambdas/candidate/serverless.dev.yml
+++ b/lambdas/candidate/serverless.dev.yml
@@ -6,16 +6,10 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: ${opt:stage, 'staging'}
+  stage: dev
   region: us-east-1
   deploymentBucket:
     name: ${self:provider.stage}-sls-candidate
-  vpc:
-    securityGroupIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
-    subnetIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
   iam:
     role: ${ssm:/terraform/shared/iam/lambda_role_arn}
   apiGateway:
@@ -48,9 +42,7 @@ functions:
           path: /candidates
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
@@ -68,9 +60,7 @@ functions:
           path: /candidates
           method: GET
           cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
@@ -88,9 +78,7 @@ functions:
           path: /candidates/result/{interview_id}
           method: GET
           cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
@@ -112,9 +100,7 @@ functions:
           path: /candidates/evaluate
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
