--- a/lambdas/interview/serverless.dev.yml
+++ b/lambdas/interview/serverless.dev.yml
@@ -1,4 +1,4 @@
-service: assessment
+service: interview
 
 frameworkVersion: "3"
 
@@ -6,16 +6,10 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: ${opt:stage, 'staging'}
+  stage: dev
   region: us-east-1
   deploymentBucket:
-    name: ${self:provider.stage}-sls-assessment
-  vpc:
-    securityGroupIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
-    subnetIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
+    name: ${self:provider.stage}-sls-interview
   iam:
     role: ${ssm:/terraform/shared/iam/lambda_role_arn}
   apiGateway:
@@ -37,77 +31,62 @@ provider:
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
     QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
 
-custom:
-  origins:
-    staging:
-      - "https://${ssm:/terraform/staging/domain_name}"
-      - "https://www.${ssm:/terraform/staging/domain_name}"
-    dev:
-      - "http://127.0.0.1:5173"
-
 functions:
-  create:
-    name: ${self:provider.stage}-assessment-create
+  evaluate-question:
+    name: ${self:provider.stage}-interview-evaluate-question
     image:
       name: default
       command:
-        - create.handler
+        - evaluate_question.handler
     events:
-      - http:
-          path: /assessments
-          method: POST
-          cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
-            type: REQUEST
-
-  generate-questions:
-    name: ${self:provider.stage}-assessment-generate-questions
-    image:
-      name: default
-      command:
-        - generate_questions.handler
-    events:
-      - sqs: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_arn}
+      - s3:
+          bucket: ${self:provider.stage}-data-question-response-audio
+          event: s3:ObjectCreated:*
+          existing: true
     timeout: 300
 
+  evaluate-interview:
+    name: ${self:provider.stage}-interview-evaluate-interview
+    image:
+      name: default
+      command:
+        - evaluate_interview.handler
+    events:
+      - s3:
+          bucket: ${self:provider.stage}-data-interview-video
+          event: s3:ObjectCreated:*
+          existing: true
+
   retrieve:
-    name: ${self:provider.stage}-assessment-retrieve
+    name: ${self:provider.stage}-interview-retrieve
     image:
       name: default
       command:
         - retrieve.handler
     events:
       - http:
-          path: /assessments
+          path: /interviews
           method: GET
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
             type: REQUEST
+    timeout: 30
 
   retrieve-by-id:
-    name: ${self:provider.stage}-assessment-retrieve-by-id
+    name: ${self:provider.stage}-interview-retrieve-by-id
     image:
       name: default
       command:
         - retrieve_by_id.handler
     events:
       - http:
-          path: /assessments/{id}
+          path: /interviews/{id}
           method: GET
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
