--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -6,10 +6,16 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: ${opt:stage, 'dev'}
+  stage: ${opt:stage, 'staging'}
   region: us-east-1
   deploymentBucket:
     name: ${self:provider.stage}-sls-interview
+  vpc:
+    securityGroupIds:
+      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
+    subnetIds:
+      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
+      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
   iam:
     role: ${ssm:/terraform/shared/iam/lambda_role_arn}
   apiGateway:
@@ -30,14 +36,6 @@ provider:
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
     QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
-
-custom:
-  origins:
-    staging:
-      - "https://${ssm:/terraform/staging/domain_name}"
-      - "https://www.${ssm:/terraform/staging/domain_name}"
-    dev:
-      - "http://127.0.0.1:5173"
 
 functions:
   evaluate-question:
@@ -76,7 +74,9 @@ functions:
           path: /interviews
           method: GET
           cors:
-            origins: ${self:custom.origins.${self:provider.stage}}
+            origins:
+              - "https://${ssm:/terraform/staging/domain_name}"
+              - "https://www.${ssm:/terraform/staging/domain_name}"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
@@ -94,7 +94,9 @@ functions:
           path: /interviews/{id}
           method: GET
           cors:
-            origins: ${self:custom.origins.${self:provider.stage}}
+            origins:
+              - "https://${ssm:/terraform/staging/domain_name}"
+              - "https://www.${ssm:/terraform/staging/domain_name}"
             allowCredentials: true
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
