--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -59,7 +59,7 @@ functions:
         - evaluate_interview.handler
     events:
       - http:
-          path: /interviews
+          path: /interviews/{id}
           method: POST
           cors:
             origins: 
@@ -69,6 +69,10 @@ functions:
           authorizer:
             authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
             type: REQUEST
+          request:
+            parameters:
+              paths:
+                id: true
     timeout: 30
 
   retrieve:
