Update S3 bucket name in serverless configuration

--- a/lambdas/interview/serverless.dev.yml
+++ b/lambdas/interview/serverless.dev.yml
@@ -40,7 +40,7 @@ functions:
         - evaluate_question.handler
     events:
       - s3:
-          bucket: ${self:provider.stage}-data-interview-video
+          bucket: ${self:provider.stage}-data-question-response-video
           event: s3:ObjectCreated:*
           existing: true
     timeout: 300
