--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -46,7 +46,7 @@ functions:
         - evaluate_question.handler
     events:
       - s3:
-          bucket: ${self:provider.stage}-data-interview-video
+          bucket: ${self:provider.stage}-data-question-response-video
           event: s3:ObjectCreated:*
           existing: true
     timeout: 300
